--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 <body>
     <div>
         <big>
-            <a href="../index.html"> home </a> <span> ----- </span>
-            <a href="pages/page1.html"> WordPress Developer </a> <span> ----- </span>
-            <a href="pages/page2.html"> Security Developer </a> <span> ----- </span>
-            <a href="pages/page3.html"> Game Developer </a> <span> ----- </span>
-            <a href="pages/page4.html"> Embedded Developer </a>
+        <table style="width: 100%;">
+            <tr>
+                <td><a href="../index.html"> home </a></td>
+                <td><a href="page1.html"> WordPress Developer </a></td>
+                <td><a href="page2.html"> Security Developer </a></td>
+                <td><a href="page3.html"> Game Developer </a></td>
+                <td><a href="page4.html"> Embedded Developer </a></td>
+            </tr>
+        </table>
         </big>
     </div>
     <hr>
