--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <table style="width: 100%;">
             <tr>
                 <td><a href="../index.html"> home </a></td>
-                <td><a href="page1.html"> WordPress Developer </a></td>
-                <td><a href="page2.html"> Security Developer </a></td>
-                <td><a href="page3.html"> Game Developer </a></td>
-                <td><a href="page4.html"> Embedded Developer </a></td>
+                <td><a href="pages/page1.html"> WordPress Developer </a></td>
+                <td><a href="pages/page2.html"> Security Developer </a></td>
+                <td><a href="pages/page3.html"> Game Developer </a></td>
+                <td><a href="pages/page4.html"> Embedded Developer </a></td>
             </tr>
         </table>
         </big>
